@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.42 2002/09/05 23:06:17 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.43 2002/09/06 00:10:59 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1423,3 +1423,6 @@ usr.bin/join/join.c				1.21
 
 sys/netinet/tcp_input.c				1.154
   always consult SS_CANTRCVMORE.  PR 18185
+
+usr.bin/patch/pch.c				1.13 via patch
+  accept the output of diff when the diff'd files do not end with newlines.
